# test_superpixels

./: CMakeLists.txt  README.md
libs/: depthoffielddefocus.h  least-squares-linear-system2.h
libs/lib_slic/: SLIC.cpp
src/: Descriptors.cpp  Descriptors_sup.cpp  _superpixel.cpp  _superpixels.cpp  hog.cpp  labelSet.cpp  superpixel.cpp  superpixels.cpp  svm.cpp  svmSuperpixels.cpp  test_superpixels.cpp  unitary_tests.cpp  utilsCaffe.cpp
